syntax = "proto3";   //Proto Version - "3" is the last one

service ProfessionalService {
    rpc List   (ProfessionalParams)     returns (ProfessionalList) {}
    rpc Get    (ProfessionalRequestId)  returns (ProfessionalGet) {}
    rpc create (Professional)           returns (Professional) {}
    rpc Update (Professional)           returns (Professional) {}
    rpc Delete (ProfessionalRequestId)  returns (Empty) {}
    rpc VerifyPass (ProfessionalParams) returns (verifyResponse) {}
}

message Empty {}

message ProfessionalParams {
    string professionalName = 2;
    string professionalEmail = 3;
    string professionalPassword = 4;
}

message Professional {
    string _id = 1;
    string professionalName = 2;
    string professionalEmail = 3;
    string professionalPassword = 4;
}

message ProfessionalList {
    repeated Professional professionals = 1;
}

message ProfessionalGet {
    Professional professional = 1;
}

message ProfessionalRequestId {
    string _id = 1;
}


message verifyResponse {
    bool verifyPass = 1;
}